# FuncToWeb

./: .gitignore  1.py  2.py  3.py  4.py  404.html  CHANGELOG.MD  CHANGELOG.md  FuncToWeb.py  PREFILL.md  README.md  TODO.MD  TODO.md  aa.py  aaa.py  all_types.py  bbb.py  index.html  lists_ui.py  main.py  mkdocs.yml  objects.inv  pyproject.toml  readme.md  setup.py
FuncToWeb/: __init__.py  analyze_func.py  ui_types.py
api/: index.html
api_doc/: index.html
auth/: index.html
authentication/: index.html
boolean/: index.html
color/: index.html
composition/: index.html
config/: index.html
constraints/: index.html
dark-mode/: index.html
dark_mode/: index.html
datetime/: index.html
docs/: api.md  api_doc.md  auth.md  authentication.md  boolean.md  color.md  composition.md  config.md  constraints.md  dark-mode.md  dark_mode.md  datetime.md  downloads.md  dropdown.md  dropdowns.md  embed.md  files.md  function-descriptions.md  images.md  index.md  lists.md  multiple-outputs.md  multiple.md  numeric.md  optional.md  outputs.md  params.md  server-configuration.md  string.md  tables.md  types.md  url_prefill.md
downloads/: index.html
dropdown/: index.html
dropdowns/: index.html
embed/: index.html
examples/: 01_basic_division.py  02_validated_division.py  03_all_basic_types.py  04_special_inputs.py  05_dropdowns.py  06_numeric_constraints.py  07_string_validation.py  08_image_blur.py  09_image_effects.py  10_image_resize.py  11_plot_sine.py  12_plot_comparison.py  13_complete_form.py  14_multiple_tools.py  15_dynamic_dropdowns.py  16_optional.py  17_list.py  README.md  all_basic_types.py  auth_example.py  lists.py  (+23 more)
(+169 files in other folders)
